src/containers/Panels/LibraryPanel/LPBody.module.scss
.wrapper {
  height: 100%;
}

.inner {
  width: 100%;
  height: 100%;
  overflow-y: hidden;

  &:hover {
    overflow: auto;
    overflow-y: overlay;
  }

  &::-webkit-scrollbar {
    width: 10px;
  }

  &::-webkit-scrollbar-thumb {
    border-radius: 999px;
    box-shadow: inset 0 0 14px rgb(73 77 80 / 80%);
    padding: 2px;
    border: 2px solid transparent;
    background-clip: padding-box;
  }

  .onboarding-export-file-target {
    position: absolute;
    top: 91px;
    right: 0;
    width: 0;
    height: 0;
  }

  .onboarding-apply-motion-target {
    position: absolute;
    top: 117px;
    left: 150px;
    width: 0;
    height: 0;
  }
}

